plugins {
    id 'java'
    id 'org.springframework.boot' version '2.5.4'
}

apply plugin: 'java'
apply plugin: 'io.spring.dependency-management'

group = 'com.sb'
version = '1.2-SNAPSHOT'
sourceCompatibility = JavaVersion.VERSION_11

repositories {
    mavenCentral()
    maven {
        url "https://nexus.sergeybochkov.com/repository/maven-public/"
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    implementation 'com.h2database:h2'

    implementation 'resnyx:resnyx:4.6.4'

    implementation 'com.google.zxing:core:3.4.1'
    implementation 'com.google.zxing:javase:3.4.1'
    implementation 'org.jsoup:jsoup:1.14.2'
    implementation 'com.jcabi:jcabi-xml:0.22.2'
    implementation 'org.reflections:reflections:0.9.12'

    compileOnly 'org.projectlombok:lombok:1.18.20'
    testCompileOnly 'org.projectlombok:lombok:1.18.20'
    annotationProcessor 'org.projectlombok:lombok:1.18.20'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

bootJar {
    archiveFileName = "resnyx-bot.jar"
}

test {
    useJUnitPlatform()
}

clean {
    doLast {
        file("${projectDir}/out").deleteDir()
    }
}